<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.sts3d.productmanagementsystem.Login"
    android:background="@drawable/gradient"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="195dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ghostcoders"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffffff"
        android:textStyle="normal" android:layout_alignParentStart="true" android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/cardview"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_marginBottom="48dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffffff"
        android:textStyle="normal" android:layout_alignStart="@+id/txtUsername" android:drawableStart="@drawable/ic_lock_black_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        app:background="@drawable/gradient"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:onClick="Login">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:onClick="Login"/>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text=""
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp" android:layout_alignParentStart="true" />


</RelativeLayout>
