<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/x"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:layout_gravity="end"
        android:id="@+id/txtClose"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/ghostcoder"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txtItemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <EditText
        android:id="@+id/txtItemDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:text="@string/dashA"
        android:textSize="14dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/SignIn"
        android:id="@+id/btnItemSign"/>
</LinearLayout>