<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.sts3d.productmanagementsystem.Login"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:layout_gravity="fill"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="1dp">
            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true"
                android:background="@drawable/gradient"
               >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebackgroundpurple"
                    android:src="@drawable/ic_control_point_black_24dp"
                    android:tint="@color/white"
                    android:padding="5dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/TODO"
                    android:onClick="ScanItem"
                   />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/banking"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dashA"
                    android:padding="1dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="1dp">
            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/gradient"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebackgroundpurple"
                    android:src="@drawable/ic_control_point_black_24dp"
                    android:tint="@color/white"
                    android:padding="5dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/TODO"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/banking"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dashA"
                    android:padding="1dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="1dp">
            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebackgroundpurple"
                    android:src="@drawable/ic_control_point_black_24dp"
                    android:tint="@color/white"
                    android:padding="5dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/TODO"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/banking"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dashA"
                    android:padding="1dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="1dp">
            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebackgroundpurple"
                    android:src="@drawable/ic_control_point_black_24dp"
                    android:tint="@color/white"
                    android:padding="10dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/TODO"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/banking"
                    android:textStyle="bold" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="1dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dashA"
                    android:padding="1dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>
